* Fix SpringMockTestExecutionListener initializes lazy beans
* Fix OSGi Import-Package header
* Fix re-declare recorder variables (#783), this caused annotations such as `@Slf4j` to break Specifications
* Fix MissingFieldException in DiffedObjectAsBeanRenderer
* Fix problems with nested `with` and `verifyAll` method calls
* Fix assertion of mock invocation order with nested invocations (#475)
* Improve in assertions Spock now uses `DefaultGroovyMethods.dump` instead of `toString` if a class doesn't override the default `Object.toString`.
* Improve `verifyAll` can now also have a target same as `with`
* Improve static type hints for `verifyAll` and `with`
* Improve reporting of exceptions during cleanup, they are now properly reported as suppressed exceptions instead of hiding the real exception
* Improve default responses for stubs, Java 8 types like `Optional` and `Streams` now return empty, `CompleteableFuture` completes with `null` result
* Improve support for builder pattern, stubs now return themselves if the return type matches the type of the stub
* Improve tapestry support with by supporting `@ImportModule`
* Improve `constructorArgs` for spies can now accept a map directly without the need to wrap it in a list
* Improve <<modules.adoc#_guice_module,Guice Module>> now automatically attaches detached mocks
* Improve unmatched mock messages by using `dump` instead of `inspect` for classes which don't provide a custom `toString`
* Improve spying on concrete instances to enable partial mocking
* General dependency update

Thanks to all the contributors to this release: Rob Elliot, jochenberger, Jan Papenbrock, Paul King, Marcin Zajączkowski, mrb-twx,
Alexander Kazakov, Serban Iordache, Xavier Fournet, timothy-long, John Osberg, AlexElin, Benjamin Muschko, Andreas Neumann, geoand,
Burk Hufnagel

=== Known Issues
* Groovy 2.4.10 introduced a bug that interfered with the way `verifyAll` works, it has been fixed in 2.4.12

== 1.1 (2017-05-01)
